# misc_hardware

./: .gitignore  README.md
Door Sensor PCB/: BOM - Door Sensor Board.xlsx  Connections.SchDoc  Door Sensor PCB V2.BomDoc  Door Sensor PCB V2.PrjPcb  Door Sensor PCB.PrjPcb  Door Sensor PCB.PrjPcbStructure  ESP32 and Sensor.SchDoc  Overview.SchDoc  Pico 2W and Sensor.SchDoc  Power.SchDoc
Door Sensor PCB/Project Outputs for Door Sensor PCB/: Design Rule Check - main.drc  Design Rule Check - main.html  Status Report.Txt  main-macro.APR_LIB  main.DRR  main.EXTREP  main.REP  main.TXT  main.apr  main_Copper_Signal_1.gbr  main_Copper_Signal_2.gbr  main_Copper_Signal_Bot.gbr  main_Copper_Signal_Top.gbr  main_Drawing_1.gbr  main_Drillmap_1.gbr  main_Keep-out.gbr  main_Legend_Bot.gbr  main_Legend_Top.gbr  main_Mechanical_1.gbr  main_NPTH_Drill.gbr  (+10 more)
Door Sensor PCB/Project Outputs for Door Sensor PCB V2/: Design Rule Check - main.drc  Design Rule Check - main.html  main.DRR  main_Copper_Signal_Bot.gbr  main_Legend_Top.gbr  main_Soldermask_Top.gbr
servo-tester/: README.md
servo-tester/Firmware/: .gitignore  CMakeLists.txt  README.md
servo-tester/Firmware/drivers/: test_driver.py
servo-tester/Firmware/lib/: README.md
servo-tester/Firmware/lib/pico-ssd1306/: CMakeLists.txt
servo-tester/Firmware/lib/pico-ssd1306/tools/: bin2c
servo-tester/Firmware/src/: MIL_USB2CAN.h  MIL_electrical_message_system.c  MIL_electrical_message_system.h  MIL_electrical_protocol_macros.h  MIL_electrical_protocol_msg.c  MIL_electrical_protocol_msg.h  main.c  mil-logo.h  servo-pwm.c  servo-pwm.h
(+99 files in other folders)
